fixed alignment, added 48hr

--- a/src/components/InformationModal/infoModal.scss
+++ b/src/components/InformationModal/infoModal.scss
@@ -27,11 +27,12 @@
 }
 
 .overlay-p {
-    text-align: justify;
+    text-align: center;
 }
 
 #overlay-btn {
     width: 10rem;
+    margin-top: 1rem;
 
 }
 
