--- a/src/components/register/register.scss
+++ b/src/components/register/register.scss
@@ -32,8 +32,10 @@
 .div-number {
     display: flex;
     width: 100%;
-    gap: 10%;
-    justify-content: space-between;
+    // gap: 1rem;
+    justify-content:space-between;
+    
+    
 }
 
 // #prefix-input{
@@ -45,11 +47,11 @@
 // }
 
 #input-divide-prefix {
-    width: 90%;
+    width: 4rem;
 }
 
 #input-divide-number {
-    width: 90%;
+    width: auto;
 }
 
 .inner-div-p {
@@ -71,20 +73,19 @@
 }
 
 .intro-p {
-    width: 21rem;
     margin-top: 0.6rem;
-    margin-bottom: 1rem;
+    text-align: left;
 }
-
-
-
 
 .normal-p{
     font-size: 12px;
     color: #787878;
-    width:fit-content;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+    
+    // width:fit-content;
+}
+
+#initial-p{
+    width:22rem;
 }
 
 .red{
@@ -112,6 +113,7 @@
   .register-container {
     margin-top: 1rem;
 }
+
 
 .div-number{
     width: 60vw;
