--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,7 @@ h2{
 input{
   outline:none;
   padding:0.5rem;
-  width:20rem;
+  width:22rem;
   height: 1.6rem;
   border: 0.5px solid #cac2c2;
   border-radius: 4px;
@@ -32,7 +32,7 @@ select{
   outline:none;
   padding:0.5rem;
   border-width: 0.5px;
-  width:20rem;
+  width:22rem;
   height: 2rem;
   
   border-radius: 4px;
@@ -51,7 +51,7 @@ button{
   border-radius: 4px;
   white-space: nowrap;
   font-size: 16px;
-  width:20rem;
+  width:22rem;
 }
 p{
   color:#787878;
